--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -3,54 +3,37 @@ name: Build Android APK
 on:
   workflow_dispatch:
   push:
-    branches:
-      - main
-      - master
+    branches: [ main ]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      # Кешируем .buildozer, чтобы следующие сборки были быстрее
+      - name: Cache buildozer
+        uses: actions/cache@v4
         with:
+          path: .buildozer
+          key: ${{ runner.os }}-buildozer-${{ hashFiles('buildozer.spec') }}
+
+      - name: Build with Buildozer action
+        uses: ArtemSBulgakov/buildozer-action@v1
+        id: buildozer
+        with:
+          # Версия Python, с которой лучше всего дружит p4a + kivy
           python-version: "3.10"
-
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            build-essential \
-            git \
-            zip \
-            unzip \
-            openjdk-17-jdk \
-            libffi-dev \
-            libssl-dev \
-            liblzma-dev \
-            libjpeg-dev \
-            libpng-dev
-
-      - name: Install Buildozer and dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install cython virtualenv
-          pip install buildozer
-
-      - name: Build APK (debug)
-        run: |
-          yes | buildozer -v android debug
-
-      - name: Build APK (debug)
-        run: |
-          buildozer android debug
+          # Сначала ставим Cython и virtualenv, потом запускаем buildozer
+          command: |
+            pip3 install --user --upgrade Cython==0.29.33 virtualenv
+            buildozer -v android debug
+          buildozer-version: stable
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: college-navigator-apk
-          path: bin/*.apk
+          path: ${{ steps.buildozer.outputs.filename }}
